tenzir/tests/ast/function_double_comma.tql
// test: ast
// error: true

a = b(c,,)
